Resolves: tdf#154125 Fix INDEX() one-dimensional vector access

For i62850 a (not documented by Excel in
https://support.microsoft.com/en-us/office/index-function-a5dcf0dd-996d-40a4-a822-b56b061328bd?ui=en-us&rs=en-us&ad=us)
one-dimensional vector's element access was implemented with
non-sufficient conditions that prevented returning an entire
vector. Later ODFF defined proper conditions for that, see
https://docs.oasis-open.org/office/OpenDocument/v1.3/os/part4-formula/OpenDocument-v1.3-os-part4-formula.html#INDEX

Also, that vector element case assumed vector replication to the
other dimension as usual, which is not the case here, access to
the other dimension's index >1 must return error.

Change-Id: I604c2355f0aca2988cb13f0d4f54ccd2d74c3b0d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148736
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins